# template_pkg

./: CMakeLists.txt  README.md  package.xml
config/: empty.yaml
launch/: gazebo.launch
src/: main.cpp  sample.py
urdf/: main.xacro
