<?xml version="1.0"?>
<package format="2">
  <name>your_pkg_name</name>
  <version>0.0.0</version>
  <description>Give description of your package</description>
  <maintainer email="123@xyz.com">Your name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
